--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Hi, {{ current_user.username }}!</h1>
-    {% for post in posts %}
-    <div><p>{{ post.author.username }} says: <b>{{ post.body }}</b></p></div>
-    {% endfor %}
+<HTML>
+<BODY bgcolor="#2f4f4f">
+<form method="POST" action="">
+    <center>
+    <H1>Enter your favorite team to get team info </H1> <br>
+    <h3>  Favorite Team:  <input type = "text" name= "fname" /> <br> </h3>
+    <input type = "submit">
+    </center>
+</form>
+</BODY>
+</HTML>
 {% endblock %}
