--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,15 +1,21 @@
 {% extends "base.html" %}
 
 {% block content %}
-<HTML>
-<BODY bgcolor="#2f4f4f">
-<form method="POST" action="">
-    <center>
-    <H1>Enter your favorite team to get team info </H1> <br>
-    <h3>  Favorite Team:  <input type = "text" name= "fname" /> <br> </h3>
-    <input type = "submit">
-    </center>
-</form>
-</BODY>
-</HTML>
+<html lang="en">
+<body bgcolor="#2f4f4f">
+<head>
+    <meta charset="UTF-8">
+    <title>Team</title>
+</head>
+<H1>Enter your favorite team to get team info </H1> <br>
+<select name= colours method="GET" action="/">
+    {% for team in teams %}
+      <option value = "{{team}}" SELECTED>{{team}}</option>
+      {% endfor %}
+</select>
+</select>
+</body>
+</html>
 {% endblock %}
+
+
