completed and intergrated search functionality

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -8,7 +8,7 @@
 </head>
 <body bgcolor="#2f4f4f">
 <H1>Select your favorite team to get team info </H1> <br>
-<form action="" method=POST">
+<form action="/search/sending" method=POST">
     {{ form.team }}<br>
     {{ form.submit() }}
 </form>
