--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,8 +7,9 @@
     <title>Team</title>
 </head>
 <body bgcolor="#2f4f4f">
-<H1>Welcome to our senior project!</H1> <br>
-<H2> Please navigate to the search tab to get stats on favorite team</H2>
+<H1 style="color:white">Welcome to our senior project! </H1> <br>
+<H2 style="color:white"> Please navigate to the search tab to get stats on your
+    favorite NBA team</H2>
 </body>
 </html>
 {% endblock %}
