--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,38 +1,38 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Register</h1>
+    <h1  style="color:white">Register</h1>
     <form action="" method="post">
         {{ form.hidden_tag() }}
-        <p>
+        <p style="color: antiquewhite">
             {{ form.username.label }}<br>
             {{ form.username(size=32) }}<br>
             {% for error in form.username.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
-        <p>
+        <p style="color: antiquewhite">
             {{ form.email.label }}<br>
             {{ form.email(size=64) }}<br>
             {% for error in form.email.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
-         <p>
+         <p style="color: antiquewhite">
             {{ form.phone_number.label }}<br>
             {{ form.phone_number(size=32) }}<br>
             {% for error in form.phone_number.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
-        <p>
+        <p style="color: antiquewhite">
             {{ form.password.label }}<br>
             {{ form.password(size=32) }}<br>
             {% for error in form.password.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
-        <p>
+        <p style="color: antiquewhite">
             {{ form.password2.label }}<br>
             {{ form.password2(size=32) }}<br>
             {% for error in form.password2.errors %}
