--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -7,7 +7,7 @@
     <title>Team</title>
 </head>
 <body bgcolor="#2f4f4f">
-<H1>Select your favorite team to get team info </H1> <br>
+<H1 style="color:white">Select your favorite NBA team to get team info </H1> <br>
 <form action="/search/sending" method=POST">
     {{ form.team }}<br>
     {{ form.submit() }}
