--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -20,7 +20,7 @@
         </p>
         <p style="color: antiquewhite">{{ form.remember_me() }} {{ form.remember_me.label }}</p>
         <p>{{ form.submit() }}</p>
-        <p style="color: white">New User? <a href="{{ url_for('register') }}"
+        <p style="color: white">New User? <a href="{{ url_for('main.register') }}"
                                              style="color: deeppink">
             Click to Register!</a></p>
     </form>
