made exists query and created functionality of api to db then from db to application

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -8,7 +8,7 @@
 </head>
 <body bgcolor="#2f4f4f">
 <H1 style="color:white">Select your favorite NBA team to get team info </H1> <br>
-<form action="/search/sending" method=POST">
+<form action="/search/saving" method=POST">
     {{ form.team }}<br>
     {{ form.submit() }}
 </form>
